--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,6 @@ secrets.yml
 .sts4-cache
 
 
-backend/.metadata
-/backend/.metadata
-*/.metadata
+backend/.metadata*
+/backend/.metadata*
+*/.metadata*
