--- a/.gitignore
+++ b/.gitignore
@@ -67,5 +67,10 @@ secrets.yml
 
 
 backend/.metadata*
+backend/.metadata
 /backend/.metadata*
 */.metadata*
+**/.metadata*
+*/.metadata
+**/.metadata
+./backend/.metadata*
